# macroframe-forecast

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  ax_package.py  contributing.html  demo.py  environment-dev.yml  examples.html  genindex.html  index.html  mff_documentation.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: contributing.doctree  environment.pickle  examples.doctree  index.doctree  mff_documentation.doctree
.doctrees/api_reference/: index.doctree  main_classes.doctree  validators.doctree
.doctrees/getting_started/: index.doctree
.github/workflows/: documentation.yml  draft-pdf.yml  release.yml  tests.yaml
_sources/: contributing.rst.txt  examples.rst.txt  index.rst.txt  mff_documentation.rst.txt
_sources/api_reference/: index.rst.txt
_sources/getting_started/: index.rst.txt
api_reference/: index.html  main_classes.html  validators.html
docs/source/: conf.py  examples.rst  index.rst  mff.rst  mff_documentation.rst  modules.rst
docs/source/api_reference/: index.rst  main_classes.rst  validators.rst
docs/source/getting_started/: demo_notebook.ipynb
docs/source/getting_started/.ipynb_checkpoints/: demo_notebook-checkpoint.ipynb
docs_ready/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs_ready/.doctrees/: environment.pickle  index.doctree
docs_ready/.doctrees/api_reference/: index.doctree  main_classes.doctree  validators.doctree
docs_ready/.doctrees/getting_started/: index.doctree
docs_ready/api_reference/: index.html  main_classes.html  validators.html
docs_ready/getting_started/: index.html
getting_started/: index.html
imf_scripts/: excel_demo.py
joss_submission/: citations.bib  paper_markdown.md
macroframe_forecast.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mff/: MFF.py  MFF_mixed_frequency.py  __init__.py  constraint_parser.py  covariance_calc.py  dataframe_reformatter.py  default_forecaster.py  ecos_reader.py  estimators.py  examples.py  get_default_estimators.py  get_default_forecaster.py  imf_oos_performance.py  mff.py  reconciliation.py  step0_parse_constraints.py  step1_forecast.py  step1_unreconciled_forecast.py  step2.py  step2_reconciler.py  string_parser.py  unconstrained_forecast.py  utils.py  validators.py
mff/tests/: test_MFF.py  test_string_parser.py  tests_MFF.py
notebooks/: Python Demo.ipynb  dev.ipynb  testing.ipynb
oos/: imf_oos_performance.py
paper/: paper.bib  paper.md
src/macroframe_forecast/: MFF.py  MFF_mixed_frequency.py  examples.py  utils.py
tests/: prep_for_test.py  test_MFF.py  test_ax_forecast.py  test_utils.py  test_validators.py
