[project]
name = "macroframe-forecast"
version = "0.1.2"
description = "Macroframework forecasting with accounting identities"
readme = "README.md"
requires-python = ">=3.11.9"
maintainers = [
    { name = "Sakai Ando", email = "sando@imf.org" },
    { name = "Sultan Orazbayev", email = "sorazbayev@imf.org" },
]
keywords = [
    "macroframework",
    "forecasting",
    "macroeconomic identities",
    "high-dimensional forecasting",
    "econometrics",
]
# https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
# tbd
dependencies = [
    "pandas >= 2.2.0",
    "numpy >= 1.26.3",
    "scipy >= 1.12.0",
    "scikit-learn >= 1.4.0",
    "dask[dataframe] >= 2024.8.1",
    "distributed >= 2024.2.0",
    "sktime >= 0.27.0",
    "sympy >= 1.12",
    "cvxpy >= 1.5.3",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >=64"]


[project.urls]
homepage = "https://github.com/sakaiando/macroframe-forecast"
repository = "https://github.com/sakaiando/macroframe-forecast"

[tool.setuptools]
packages = ["mff"]


[tool.isort]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
profile = "black"
skip_gitignore = true
float_to_top = true
default_section = "THIRDPARTY"
known_first_party = "mff"
line_length = 100

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "tests"
pythonpath = ["."]
addopts = [
    "--strict-config",  # Force error if config is mispelled
    "--strict-markers", # Force error if marker is mispelled (must be defined in config)
    "-ra",              # Print summary of all fails/errors
]
markers = ["slow: Skipped unless --runslow passed"]
log_cli_level = "info"
filterwarnings = [
    # See: https://docs.python.org/3/library/warnings.html#describing-warning-filters
    # and: https://docs.pytest.org/en/7.2.x/how-to/capture-warnings.html#controlling-warnings
    "error",

    # numpy 1.25.0 (2023-06-17) deprecated `np.find_common_type`; many other dependencies use it.
    # See if we can remove this filter in 2025.
    "ignore:np.find_common_type is deprecated:DeprecationWarning:",

    # pypy gives this warning
    "ignore:can't resolve package from __spec__ or __package__:ImportWarning:",

    # Python 3.12 introduced this deprecation, which is triggered by pandas 2.1.1
    "ignore:datetime.datetime.utcfromtimestamp:DeprecationWarning:dateutil",
]

[tool.ruff]
# https://github.com/charliermarsh/ruff/
line-length = 100

[tool.ruff.pydocstyle]
convention = "numpy"
